<resources>
    <string name="app_name">Harkkatyö</string>

    <string name="TV_UserN">User name</string>
    <string name="TV_password">Password</string>
    <string name="TV_FirstN">First name</string>
    <string name="TV_LastN">Last name</string>
    <string name="TV_DateOfBirth">Date of birth</string>
    <string name="TV_address">Address</string>
    <string name="TV_phoneNumber">Phonenumber</string>
    <string name="TV_Email">Email</string>
    <string name="TV_RePassword">Password again</string>
    <string name="LogIn">Log In</string>
    <string name="BT_cancel">Cancel</string>
    <string name="BT_cont">Continue</string>
    <string name="BT_back">Back</string>
    <string name="BT_MakeAcc">Make account</string>
    <string name="TV_datHint">dd.MM.YYYY</string>
    <string name="BT_Account">Accounts</string>
    <string name="BT_Events">Account Events</string>
    <string name="BT_BankC">Bank Cards</string>
    <string name="BT_Payment">Payments</string>
    <string name="TV_name">Name</string>
    <string name="TV_country">Country</string>
    <string name="TV_changePassword">Change password</string>
    <string name="TV_oldP">Old password</string>
    <string name="TV_newP">New password</string>
    <string name="TV_reNewP">New password again</string>
    <string name="TV_accounts">Accounts</string>
    <string name="TV_events">Events</string>
    <string name="TV_BankCards">Bank Cards</string>
    <string name="TV_payments">Payments</string>
    <string name="TV_payment">Payment</string>
    <string name="TV_more">More</string>
    <string name="TV_oldPayments">Old Payments</string>
    <string name="TV_newPayment">New Payment</string>
    <string name="TV_addAccount">Add an Account</string>
    <string name="EV_giveBalance">Give accounts balance</string>
    <string name="CB_isSavings">Is Savingsaccount</string>
    <string name="TV_accountSingle">Account</string>
    <string name="TV_APayment">Make payment</string>
    <string name="TV_cash">Record cash transaction</string>
    <string name="TV_addMoney">Add money</string>
    <string name="TV_amount">Amount</string>
    <string name="TV_message">Message / reference</string>
    <string name="TV_receiver">Receiver</string>
    <string name="BT_makePayment">Make payment</string>
    <string name="BT_addMney">Add money</string>
    <string name="TV_setamount">Add money to account</string>
    <string name="TV_card">Card</string>
    <string name="TV_chekcingLimit">Checking Limit</string>
    <string name="TV_cashLimit">Cash Limit</string>
    <string name="TV_webLimit">Web purchase limit</string>
    <string name="BT_delete">Delete Card</string>
    <string name="BT_customize">Customize Limits</string>
    <string name="TV_credit">Credit</string>
    <string name="TV_makeCard">Make a Card</string>
    <string name="empty23">Receiver</string>
    <string name="empty22">Receiver</string>
    <string name="empty21">Receiver</string>


    <string name="country_prompt">Choose country</string>
    <string-array name="country_arrays">
        <item>None</item>
        <item>Findland</item>
        <item>USA</item>
        <item>France</item>
    </string-array>

    <string name="card_type">Choose type</string>
    <string-array name="card_type">
        <item>Cash</item>
        <item>Online</item>
        <item>Check</item>
    </string-array>

    <string name="Card_type">Choose type</string>
    <string-array name="actual_card_type">
        <item>Debit</item>
        <item>Credit</item>
        <item>Credit/Debit</item>
    </string-array>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_use_cards">UseCards</string>
</resources>
