<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".addnfoView">

    <TextView
        android:id="@+id/lastnameT"
        android:layout_width="114dp"
        android:layout_height="36dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="114dp"
        android:layout_marginRight="114dp"
        android:layout_marginBottom="610dp"
        android:hint="@string/TV_LastN"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/birthday"
        android:layout_width="175dp"
        android:layout_height="41dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="227dp"
        android:layout_marginRight="227dp"
        android:layout_marginBottom="508dp"
        android:hint="@string/TV_DateOfBirth"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/addressT"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="225dp"
        android:layout_marginRight="225dp"
        android:layout_marginBottom="394dp"
        android:hint="@string/TV_address"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/phonenumberT"
        android:layout_width="194dp"
        android:layout_height="38dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="209dp"
        android:layout_marginRight="209dp"
        android:layout_marginBottom="297dp"
        android:hint="@string/TV_phoneNumber"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/emailT"
        android:layout_width="159dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="243dp"
        android:layout_marginRight="243dp"
        android:layout_marginBottom="210dp"
        android:hint="@string/TV_Email"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/firstnameT"
        android:layout_width="114dp"
        android:layout_height="36dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="288dp"
        android:layout_marginRight="288dp"
        android:layout_marginBottom="610dp"
        android:hint="@string/TV_FirstN"
        android:textSize="24sp" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="178dp"
        android:layout_height="36dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="129dp"
        android:layout_marginEnd="58dp"
        android:layout_marginRight="58dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/lastname"
            android:layout_width="match_parent"
            android:layout_height="29dp" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="381dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="222dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/birthdate"
            android:layout_width="match_parent"
            android:layout_height="26dp" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="385dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="440dp"
        android:layout_marginEnd="18dp"
        android:layout_marginRight="18dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/puhelinnumero"
            android:layout_width="366dp"
            android:layout_height="27dp" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="383dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="531dp"
        android:layout_marginEnd="19dp"
        android:layout_marginRight="19dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/email"
            android:layout_width="372dp"
            android:layout_height="27dp" />
    </android.support.design.widget.TextInputLayout>

    <Spinner
        android:id="@+id/country"
        android:layout_width="363dp"
        android:layout_height="38dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="263dp"
        android:layout_marginEnd="34dp"
        android:layout_marginRight="34dp" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="132dp"
        android:layout_marginEnd="261dp"
        android:layout_marginRight="261dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/firstname"
            android:layout_width="match_parent"
            android:layout_height="29dp" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="337dp"
        android:layout_height="43dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="344dp"
        android:layout_marginEnd="65dp"
        android:layout_marginRight="65dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/adress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/cancle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="592dp"
        android:layout_marginEnd="260dp"
        android:layout_marginRight="260dp"
        android:text="@string/BT_cancel" />

    <Button
        android:id="@+id/cont"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="595dp"
        android:layout_marginEnd="118dp"
        android:layout_marginRight="118dp"
        android:text="@string/BT_cont" />

</RelativeLayout>