<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:onClick="makeTheAccount"
    tools:context=".makeAccount">

    <TextView
        android:id="@+id/textView13"
        android:layout_width="219dp"
        android:layout_height="57dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="110dp"
        android:layout_marginRight="110dp"
        android:layout_marginBottom="583dp"
        android:text="@string/TV_addAccount"
        android:textSize="24sp" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="269dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="72dp"
        android:layout_marginRight="72dp"
        android:layout_marginBottom="520dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/giveBalance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/EV_giveBalance"
            android:inputType="numberDecimal" />
    </android.support.design.widget.TextInputLayout>

    <CheckBox
        android:id="@+id/isSavings"
        android:layout_width="271dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="72dp"
        android:layout_marginRight="72dp"
        android:layout_marginBottom="479dp"
        android:text="@string/CB_isSavings" />

    <Button
        android:id="@+id/makeTheAccount"
        android:layout_width="189dp"
        android:layout_height="59dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="122dp"
        android:layout_marginRight="122dp"
        android:layout_marginBottom="381dp"
        android:onClick="makeTheAccount" />
</RelativeLayout>