<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewCard">

    <TextView
        android:id="@+id/textView20"
        android:layout_width="209dp"
        android:layout_height="69dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="55dp"
        android:layout_marginEnd="128dp"
        android:layout_marginRight="128dp"
        android:text="@string/TV_makeCard"
        android:textSize="24sp" />

    <Button
        android:id="@+id/makeCard"
        android:layout_width="154dp"
        android:layout_height="60dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="446dp"
        android:layout_marginEnd="164dp"
        android:layout_marginRight="164dp"
        android:text="Button" />

    <Spinner
        android:id="@+id/chooseType"
        android:layout_width="308dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="128dp"
        android:layout_marginEnd="63dp"
        android:layout_marginRight="63dp"
        android:entries="@array/actual_card_type" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="131dp"
        android:layout_height="53dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="158dp"
        android:layout_marginEnd="238dp"
        android:layout_marginRight="238dp"
        android:text="@string/TV_chekcingLimit"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView28"
        android:layout_width="123dp"
        android:layout_height="49dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="359dp"
        android:layout_marginEnd="235dp"
        android:layout_marginRight="235dp"
        android:text="@string/TV_credit"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView29"
        android:layout_width="123dp"
        android:layout_height="49dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="282dp"
        android:layout_marginEnd="248dp"
        android:layout_marginRight="248dp"
        android:text="@string/TV_webLimit"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView30"
        android:layout_width="123dp"
        android:layout_height="49dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="219dp"
        android:layout_marginEnd="242dp"
        android:layout_marginRight="242dp"
        android:text="@string/TV_cashLimit"
        android:textSize="20sp" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="157dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/CheckingL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="206dp"
        android:layout_height="41dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="222dp"
        android:layout_marginEnd="27dp"
        android:layout_marginRight="27dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/CashL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="226dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="272dp"
        android:layout_marginEnd="7dp"
        android:layout_marginRight="7dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/OnlineL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="206dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="343dp"
        android:layout_marginEnd="21dp"
        android:layout_marginRight="21dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/Credit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </android.support.design.widget.TextInputLayout>
</RelativeLayout>